# su-code

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  install.ps1  install.sh
.cargo/: config.toml
.github/workflows/: pages.yml  release.yml
.omp/commands/: auto.md  pull-now.md  push-now.md
.omp/extensions/: 8sync-engine.ts  8sync-workflow.ts
.serena/: .gitignore  project.yml
agents/: KNOWLEDGE.md  PROJECT.md  STATE.md  skills.toml
agents/archive/: KNOWLEDGE-1782720288.md  KNOWLEDGE-1782921286.md  KNOWLEDGE-1782948089.md  KNOWLEDGE-1782948170.md  KNOWLEDGE-1782951271.md  KNOWLEDGE-1782951545.md  KNOWLEDGE-1782951662.md  KNOWLEDGE-1783170628.md  KNOWLEDGE-1783210590.md  KNOWLEDGE-1783219423.md  KNOWLEDGE-1783222698.md  KNOWLEDGE-1783222758.md  KNOWLEDGE-1783248080.md  KNOWLEDGE-1783248455.md  KNOWLEDGE-1783313206.md
agents/skills/codegraph/: SKILL.md
assets/agents/: gs-critic.md  gs-planner.md  gs-researcher.md  gs-reviewer.md  gs-security.md  gs-verifier.md  gs-worker.md
assets/commands/: auto.md  feature.md  gs.md  pull-now.md
assets/configs/: 8sync-mcp.service  8sync-palette-cycle.sh  end4-bridge-keybinds.conf  end4-glass-theme.conf  fish-config.fish  global.toml  helix-config.toml  helix-glass_black.toml  kitty.conf  kitty.session  models.toml  skills.toml
assets/configs/8sync/: gs.json
assets/configs/helix/: config.toml
assets/configs/omp/: APPEND_SYSTEM.md  gateway-models.yml
assets/eval/add-fn-with-test/: task.md  (+1 more)
assets/extensions/: 8sync-engine.ts
assets/hooks/: 8sync-recall.ts
assets/presets/: dark.conf  dim.conf  ice_glass.conf  mint_glass.conf  neon_glass.conf
assets/profiles/: alexdev.toml  apps-personal.toml  bluetooth.toml  caelestia-hyde.toml  caelestia.toml  dev-stack.toml  displaylink.toml  hardware-cooling.toml  hardware-lianli.toml  nvidia.toml  vietnamese.toml  warp.toml
assets/retired/: 8sync-engine.ts
assets/skills/: 00-force-load.md
assets/specs/: mcp-server.md
assets/wallpapers/: README.md  wallpapers.toml
crates/cli/: Cargo.toml  build.rs
crates/cli/src/: AGENTS.md  assets.rs  brand.rs  env_detect.rs  main.rs  models.rs  pkg.rs  platform.rs  ui.rs
crates/cli/src/verbs/: ai.rs  bg.rs  bt.rs  clean.rs  diff_img.rs  doctor.rs  end.rs  feature.rs  feynman.rs  find.rs  flow.rs  here.rs  locate.rs  look.rs  mcp.rs  mod.rs  note.rs  pdf_img.rs  profile.rs  root.rs  run.rs  sec.rs  selfup.rs  setup.rs  ship.rs  shot.rs  skill.rs  theme.rs  up.rs  vpn.rs
crates/cli/src/verbs/harness/: audit.rs  auto.rs  bench.rs  browser.rs  compaction.rs  custom_model.rs  eval.rs  external.rs  gateway.rs  global.rs  init.rs  knowledge.rs  local_model.rs  marketplace.rs  memory.rs  mod.rs  model.rs  toolstats.rs  up.rs  web.rs
crates/cli/src/verbs/skill/: add.rs  deploy.rs  discover.rs  gen.rs  index.rs  inject.rs  list.rs  meta.rs  mod.rs  spec.rs  update.rs
docs/: index.html  known-issues.md
outputs/: agent-team-workflow-automation-plan.md  claude-desktop-linux-installer-state.md  dashboard-redesign-plan.md  gs-eval-improve-research-brief.md  gs-eval-improve-research-brief.provenance.md  harness-loop-engineering-v2-plan.md  harness-loop-engineering-v2-plan.provenance.md  harness-selfimprove-research-brief.md  harness-selfimprove-research-brief.provenance.md  omp-customization-memory-platform-research.md  one-auto-unification-plan.md  raising-tool-adherence-research.md  raising-tool-adherence-research.provenance.md
plans/: 2026-05-18-slim-down-for-hyde-v1.md  2026-05-18-slim-down-for-hyde-v2.md  2026-05-18-slim-down-for-hyde-v3-pkg-audit.md  2026-05-18-slim-down-for-hyde-v4-attribution.md  2026-05-18-slim-down-for-hyde-v5-timestamp.md  2026-05-18-slim-down-for-hyde-v6-profiles.md  2026-05-18-slim-down-for-hyde-v7-sec-verb.md
scripts/: alexdev-install.sh  bootstrap.sh  install-caelestia.sh
su-code/: KNOWLEDGE.md  STATE.md  skills.toml
su-code/archive/: KNOWLEDGE-1782720405.md  KNOWLEDGE-1782725542.md  KNOWLEDGE-1782879675.md  KNOWLEDGE-1782951358.md  KNOWLEDGE-1783322297.md  KNOWLEDGE-1783900247.md  KNOWLEDGE-1783958133.md  KNOWLEDGE-1784072460.md  KNOWLEDGE-1784077922.md  KNOWLEDGE-1784254731.md  KNOWLEDGE-1784595938.md  STATE-1783219303.md
su-code/plans/: agent-terminal-app.md
su-code/workflows/: demo.json
tests/gs/: adapter.test.ts  benchmark.test.ts  config.test.ts  machine.test.ts  policy.test.ts  store.test.ts  task-evidence.test.ts
web/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
web/src/: AGENTS.md  App.tsx  api.ts  icons.tsx  main.tsx  markdown.tsx  styles.css
(+74 files in other folders)
