[workspace]
resolver = "2"
members = ["crates/cli"]

[workspace.package]
version = "0.42.0"
edition = "2021"
license = "MIT"
authors = ["8sync-dev <8sync.dev.1111@gmail.com>"]
repository = "https://github.com/8-Sync-Dev/su-code"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
