[package]
name = "su-code"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "8sync — vibe coding harness for CachyOS + Kitty + Helix"

[[bin]]
name = "8sync"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "wrap_help"] }
anyhow = "1.0"
owo-colors = "4.1"
dirs = "5.0"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
which = "7.0"
indoc = "2.0"
# `compression` (include-flate) shrinks the embedded assets/skills + web/dist tree
# at compile time, decompressed transparently on `.data` — offsets bundled rusqlite
# + impeccable + the Vite FE to keep the binary lean.
rust-embed = { version = "8.5", features = ["debug-embed", "compression"] }
serde_json = "1.0"
urlencoding = "2.1"
# `8sync harness web` dashboard (axum + tokio) — intentional override of the
# "avoid tokio" rule in AGENTS.md §8; gated behind the `web` harness subcommand.
axum = { version = "0.7", default-features = false, features = ["http1", "json", "tokio"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "signal", "macros"] }
tower-http = { version = "0.5", features = ["cors"] }
# `8sync harness toolstats` — SQLite tracker of omp tool-call usage (optimizer vs
# fallback ratio + failures). Bundled sqlite = self-contained, no system dep.
rusqlite = { version = "0.32", features = ["bundled"] }
